<resources>
    <string name="app_name">Путь</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro1_header">Хочешь изменить жизнь?</string>
    <string name="intro1_header2">Ты уже сделал хороший шаг на этом Пути.</string>
    <string name="intro1_text">Но…  для того, чтобы сдвинуться с места, необходимо изменить свой образ мышления.</string>
    <string name="sign_in">Вход</string>
    <string name="sign_up">Регистрация</string>

    <string name="intro1_title">Ты здесь, чтобы изменить свою жизнь к лучшему?</string>
    <string name="intro1_body1">Тогда ты в нужном месте</string>
    <string name="intro1_body2">Но…  для того, чтобы сдвинуться с места, необходимо (и это важное условие) изменить свой образ мышления.</string>
    <string name="intro2_title">Ты хочешь изменить обстоятельства?</string>
    <string name="intro2_body">Для этого развивай в себе необходимый тип сознания.\n\nПреуспевающий человек всегда обладает сознанием, настроенным на успех.\n\nЭто его образ мышления, его убеждения!\n\n<b>Ведь наши убеждения</b>\n\n
   – рождают наши мысли\n
   – мысли рождают действия\n
   – действия рождают реальность.
</string>
    <string name="sign_info">При входе или регистрации вы принимате условия <b>пользовательского</b> соглашения и ознакомлены с <b>политикой конфиденциальности</b>. Настройки подписок доступны полсе регистрации</string>
    <string name="about_creators_info">Лучшие психологи, бизнес-тренеры и коучи по личностному росту со всей России. Мы уже готовим новые тренинги по финансам, отношениям, здоровью и карьере. </string>
    <string name="year_price_without_discount">Вместо\n<strike>4900 руб</strike></string>
    <string name="price_without_discount_ekaterina">Вместо <strike>5900 руб</strike></string>
    <string name="price_without_discount_vasiliy">Вместо <strike>3900 руб</strike></string>

    <string name="you_receive">1. избавишься от негативного мышления;\n2. повысишь самооценку;\n3. увеличишь доходы;\n4. выстроишь гармоничные отношения;\n5. научишься восполнять ресурс и др.</string>
    <string name="skip_discount_text"><u>Я не хочу ничего менять</u></string>
    <string name="discount_accept_text">Я хочу изменить свою жизнь к лучшему, я готов использовать все возможности\n👇</string>
    <string name="prisoedinaysa"><u>Присоединяйся!</u></string>
    <string name="quick_start"><b>Быстрый старт.</b>\nТренинг-настройка «как не сдаться на полпути».</string>
    <string name="repower"><b>Подзарядка.</b> Мощная программа по энергии и ресурсу.</string>
    <string name="turbo"><b>Турбо-ускорение.</b> Тотальная прокачка 4 сфер жизни: финансы, здоровье, отношения, предназначение.</string>
    <string name="katiay"><u>Екатерина Кудрявцева</u></string>
    <string name="way_million"><u>Путь на миллион</u></string>
    <string name="money_in_head">Деньги\nв голове</string>
    <string name="mih_head_text"><b>План на день:</b> медитации (настройки) + практические задания</string>
    <string name="bam_text">Тело и\nпсихика</string>
    <string name="money_energe_text">Энергия\nденег</string>
    <string name="old_price">3500 старая цена</string>
</resources>